force-app/main/default/objects/Closing_The_Loop__c/Closing_The_Loop__c.object-meta.xml
<CustomObject>
    <label>Closing The Loop</label>
    <nameField>
        <displayFormat>CTL-{0000}</displayFormat>
        <label>Closing The Loop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closing The Loop</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>