force-app/main/default/objects/Closing_The_Loop__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closing The Loops</relationshipLabel>
    <relationshipName>Closing_The_Loops</relationshipName>
    <type>Lookup</type>
</CustomField>