force-app/main/default/objects/Closing_The_Loop__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Closing The Loops</relationshipLabel>
    <relationshipName>Closing_The_Loops</relationshipName>
    <type>Lookup</type>
</CustomField>