force-app/main/default/objects/Closing_The_Loop__c/fields/CaseOwner__c.field-meta.xml
<CustomField>
    <fullName>CaseOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Closing_The_Loops1</relationshipName>
    <type>Lookup</type>
</CustomField>