force-app/main/default/objects/Closing_The_Loop__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closing The Loops</relationshipLabel>
    <relationshipName>Closing_The_Loops</relationshipName>
    <type>Lookup</type>
</CustomField>