force-app/main/default/objects/Closing_The_Loop__c/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <formula>ContactName__r.Phone</formula>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>