force-app/main/default/objects/Closing_The_Loop__c/fields/CSAT_Followed_Up_By__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Followed_Up_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSAT Followed Up By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Closing_The_Loops</relationshipName>
    <type>Lookup</type>
</CustomField>