force-app/main/default/objects/Closing_The_Loop__c/fields/CSATComments__c.field-meta.xml
<CustomField>
    <fullName>CSATComments__c</fullName>
    <label>CSAT Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>