force-app/main/default/objects/Closing_The_Loop__c/fields/CSATFollowedUpDate__c.field-meta.xml
<CustomField>
    <fullName>CSATFollowedUpDate__c</fullName>
    <label>CSAT Followed Up Date</label>
    <type>Date</type>
</CustomField>