force-app/main/default/objects/Closing_The_Loop__c/fields/CSATFollowUpDetail__c.field-meta.xml
<CustomField>
    <fullName>CSATFollowUpDetail__c</fullName>
    <label>CSAT Follow Up Detail</label>
    <type>TextArea</type>
</CustomField>