force-app/main/default/objects/Closing_The_Loop__c/fields/CSATScore__c.field-meta.xml
<CustomField>
    <fullName>CSATScore__c</fullName>
    <label>CSAT Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>