force-app/main/default/objects/Closing_The_Loop__c/fields/CustomerFeedback__c.field-meta.xml
<CustomField>
    <fullName>CustomerFeedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Feedback</label>
    <referenceTo>Customer_Feedback__c</referenceTo>
    <relationshipLabel>Closing The Loops</relationshipLabel>
    <relationshipName>Closing_The_Loops</relationshipName>
    <type>Lookup</type>
</CustomField>