force-app/main/default/objects/Closing_The_Loop__c/fields/EmailSent__c.field-meta.xml
<CustomField>
    <fullName>EmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>