force-app/main/default/objects/Closing_The_Loop__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Feedback from TP</description>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>