force-app/main/default/objects/Closing_The_Loop__c/fields/Feedback_Link__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Link__c</fullName>
    <description>Link to the TP Review</description>
    <label>Feedback Link</label>
    <type>Url</type>
</CustomField>