force-app/main/default/objects/Closing_The_Loop__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>TP Stars Score</description>
    <label>Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>