force-app/main/default/objects/Closing_The_Loop__c/fields/SendEmailon_del__c.field-meta.xml
<CustomField>
    <fullName>SendEmailon_del__c</fullName>
    <formula>CASE(
MOD( DATEVALUE(CreatedDate ) - DATE( 1900, 1, 7 ), 7 ),
0, CreatedDate + 3 ,
1, CreatedDate + 2 ,
2, CreatedDate + 2 ,
3, CreatedDate + 2 ,
4, CreatedDate + 4 ,
5, CreatedDate + 4 ,
6, CreatedDate + 3 ,
CreatedDate + 2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Email on:</label>
    <type>DateTime</type>
</CustomField>