force-app/main/default/objects/Closing_The_Loop__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>TP Title</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>