force-app/main/default/objects/Closing_The_Loop__c/fields/Trustpilot_Follow_Up_By__c.field-meta.xml
<CustomField>
    <fullName>Trustpilot_Follow_Up_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trustpilot Follow Up By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Closing_The_Loop</relationshipName>
    <type>Lookup</type>
</CustomField>