force-app/main/default/objects/Closing_The_Loop__c/fields/TrustpilotComment__c.field-meta.xml
<CustomField>
    <fullName>TrustpilotComment__c</fullName>
    <label>Trustpilot Comment</label>
    <type>TextArea</type>
</CustomField>