force-app/main/default/objects/Closing_The_Loop__c/fields/TrustpilotFollowUpCode__c.field-meta.xml
<CustomField>
    <fullName>TrustpilotFollowUpCode__c</fullName>
    <label>Trustpilot Follow Up Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software Performance</fullName>
            </value>
            <value>
                <fullName>Other Team - Account Management</fullName>
            </value>
            <value>
                <fullName>Other Team - Projects/Onboarding</fullName>
            </value>
            <value>
                <fullName>Other Team - Development/Product</fullName>
            </value>
            <value>
                <fullName>Other Team - Finance</fullName>
            </value>
            <value>
                <fullName>Internal Processors</fullName>
            </value>
            <value>
                <fullName>Missing Functionality</fullName>
            </value>
            <value>
                <fullName>Support Responsiveness</fullName>
            </value>
            <value>
                <fullName>Quality of Resolution Provided</fullName>
            </value>
            <value>
                <fullName>Misunderstood Survey</fullName>
            </value>
            <value>
                <fullName>Survey Fatigue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>