force-app/main/default/objects/Closing_The_Loop__c/fields/TrustpilotFollowUpDate__c.field-meta.xml
<CustomField>
    <fullName>TrustpilotFollowUpDate__c</fullName>
    <label>Trustpilot Follow Up Date</label>
    <type>DateTime</type>
</CustomField>