force-app/main/default/objects/Closing_The_Loop__c/fields/TrustpilotReference__c.field-meta.xml
<CustomField>
    <fullName>TrustpilotReference__c</fullName>
    <label>Trustpilot Reference</label>
    <type>TextArea</type>
</CustomField>