force-app/main/default/objects/Closing_The_Loop__c/fields/TrustpilotReply__c.field-meta.xml
<CustomField>
    <fullName>TrustpilotReply__c</fullName>
    <label>Trustpilot Reply</label>
    <type>TextArea</type>
</CustomField>