force-app/main/default/objects/Closing_The_Loop__c/fields/TrustpilotScore__c.field-meta.xml
<CustomField>
    <fullName>TrustpilotScore__c</fullName>
    <label>Trustpilot Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>