force-app/main/default/objects/Closing_The_Loop__c/fields/TrustpilotSource__c.field-meta.xml
<CustomField>
    <fullName>TrustpilotSource__c</fullName>
    <label>Trustpilot Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>