force-app/main/default/objects/Closing_The_Loop__c/recordTypes/CSAT_Follow_Up.recordType-meta.xml
<RecordType>
    <fullName>CSAT_Follow_Up</fullName>
    <active>true</active>
    <label>CSAT Follow Up</label>
</RecordType>