force-app/main/default/objects/Closing_The_Loop__c/recordTypes/Trustpilot_Follow_Up.recordType-meta.xml
<RecordType>
    <fullName>Trustpilot_Follow_Up</fullName>
    <active>true</active>
    <label>Trustpilot Follow Up</label>
</RecordType>