force-app/main/default/objects/Closing_The_Loop__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>CSATScore__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CustomerFeedback__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>