force-app/main/default/objects/Closing_The_Loop__c/listViews/All_Open_CSAT_Follow_Up_Records.listView-meta.xml
<ListView>
    <fullName>All_Open_CSAT_Follow_Up_Records</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>CSATScore__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Closing_The_Loop__c.CSAT_Follow_Up</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>All Open CSAT Follow Up Records</label>
</ListView>