force-app/main/default/objects/Closing_The_Loop__c/listViews/My_Completed_Follow_Ups.listView-meta.xml
<ListView>
    <fullName>My_Completed_Follow_Ups</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ContactName__c</columns>
    <columns>Product__c</columns>
    <columns>CSATScore__c</columns>
    <columns>CSATComments__c</columns>
    <columns>Status__c</columns>
    <columns>CSATFollowUpCode__c</columns>
    <columns>CSATFollowUpDetail__c</columns>
    <columns>CSATFollowedUpDate__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>My Completed Follow Ups</label>
</ListView>